Sytle changes. git add .

--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
     <div class="container">
         <form>
             <label for="image">
-                Paste your profile image's url from HubSpot.
+                Paste your profile image's url from HubSpot
             </label>
             <input type="text" id="image" required>
 
             <label for="name">
-                Enter your full name.
+                Enter your full name
             </label>
             <input type="text" id="name" required>
 
             <label for="job">
-                Enter your job title.
+                Enter your job title
             </label>
             <input type="text" id="job" required>
 
             <label for="email">
-                Enter your work email.
+                Enter your work email
             </label>
-            <input type="text" id="email" required>
+            <input placeholder="firstname.lastname@elevateht.com" type="text" id="email" required>
 
             <label for="phone">
-                Enter your work phone number.
+                Enter your work phone number
             </label>
-            <input type="text" id="phone" required>
+            <input placeholder="(XXX) XXX-XXXX"  type="text" id="phone" required>
 
             <button type="submit" id="submit">Submit</button>
         </form>
     </div>
     <div id="signature-container" class="container hidden">
-        <table id="signature-card" cellspacing="0" cellpadding="0" style=" margin: 0; padding: 0; width: 100%; max-width: 600px; border-collapse: collapse; line-height: 150%;">
+        <table id="signature-card" cellspacing="0" cellpadding="0" style=" margin: 0; padding: 0; width: 100%; max-width: 650px; border-collapse: collapse; line-height: 150%;">
             <tr>
                 <td style="padding: 12px; vertical-align: middle; width: 100px;">
                     <img id="profile-img" src="" alt="" style="width: 100px; border-radius: 5px;">
