Give the table a fixed width.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Email Signature</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,700&display=swap" rel="stylesheet">
 </head>
 <body style="margin-top: 40px;">
     <div class="container">
@@ -42,7 +46,7 @@
         </form>
     </div>
     <div id="signature-container" class="container hidden">
-        <table id="signature-card" cellspacing="0" cellpadding="0" style=" margin: 0; padding: 0; width: 100%; max-width: 650px; border-collapse: collapse; line-height: 150%;">
+        <table id="signature-card" cellspacing="0" cellpadding="0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; padding: 0; width: 600px; border-collapse: collapse; line-height: 150%;">
             <tr>
                 <td style="padding: 12px; vertical-align: middle; width: 100px;">
                     <img id="profile-img" src="" alt="" style="width: 100px; border-radius: 5px;">
