--- a/index.html
+++ b/index.html
@@ -50,30 +50,30 @@
             <table id="signature-card" role="presentation" width="600" cellspacing="0" cellpadding="0" style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 150%; border-collapse: collapse;">
                 <tr>
                     <!-- Profile Image -->
-                    <td width="120" style="padding-bottom: 16px; vertical-align: middle;">
+                    <td width="100" style="padding-bottom: 16px; vertical-align: top;">
                         <img id="profile-img" src="" alt="" width="100" style="border-radius: 5px;">
                     </td>
             
                     <!-- Name, Title, Company -->
-                    <td style="vertical-align: middle;">
-                        <p id="name-render" style="margin: 0; font-size: 16px; font-weight: bold; color: #0274c8;"></p>
-                        <p id="job-render" style="margin: 0; font-size: 14px;"></p>
-                        <p style="margin: 0; font-size: 12px; font-weight: bold;">Elevate Health Technologies</p>
+                    <td style="vertical-align: middle; padding-left: 16px; padding-bottom: 20px;">
+                        <p id="name-render" style="margin: 0; font-size: 18px; line-height: 180%; font-weight: bold; color: #0274c8;"></p>
+                        <p id="job-render" style="line-height: 120%; margin: 0; font-size: 14px;"></p>
+                        <p style="margin: 0; font-size: 14px; font-weight: bold;">Elevate Health Technologies</p>
                     </td>
             
                     <!-- Contact Info (With Border) -->
-                    <td width="250" style="vertical-align: middle; padding-left: 16px; border-left: 1px solid #0274c8; line-height: 150%; font-size: 14px;">
+                    <td width="250" style="vertical-align: middle; padding-left: 16px; padding-bottom: 20px; border-left: 1px solid #0274c8; line-height: 180%; font-size: 14px;">
                         <table role="presentation" cellspacing="0" cellpadding="0">
                             <tr>
-                                <td><span>📞</span> <span> </span> </td>
+                                <td><span style="margin-right: 8px;">📞</span></td>
                                 <td><a id="phone-render" href="" style="text-decoration: none; color: black;"></a></td>
                             </tr>
                             <tr>
-                                <td><span>📧 </span> <span> </span> </td>
+                                <td><span style="margin-right: 8px;">📧</span></td>
                                 <td><a id="email-render" href="" style="text-decoration: none; color: black;"></a></td>
                             </tr>
                             <tr>
-                                <td><span>🔗 </span> <span> </span> </td>
+                                <td><span style="margin-right: 8px;">🔗</span></td>
                                 <td><a href="https://www.ElevateHT.com" style="text-decoration: none; color: black;">www.ElevateHT.com</a></td>
                             </tr>
                         </table>
