Add statement of confidentiality.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
                         <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/Asset%2040@4x.png" alt="Elevate Health Technologies" width="170">
                     </td>
                 </tr>
+
+                <tr>
+                    <td colspan="3" style="padding-top: 20px; line-height: 100%;">
+                        <span style="font-size: 8px; font-style: italic;">
+                            <b>Statement of Confidentiality: </b>The information contained in this e-mail and any attachments may contain privileged, confidential, and/or protected health information (PHI) solely for the use of Elevate Health Technologies and the intended recipient(s). If you are not the intended recipient, you are hereby notified that any review, dissemination, distribution, printing, or copying of this email message and/or any attachments is strictly prohibited and may violate applicable laws including the Electronic Communications Privacy Act or HIPAA. If you have received this transmission in error, please notify the sender immediately and permanently delete this email and any attachments. Elevate Health Technologies does not assume any responsibility for changes made to this email message and any attachments after transmission.
+                        </span>
+                    </td>
+                </tr>
             </table>
             
 
