Add cell phone number.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             </label>
             <input placeholder="(XXX) XXX-XXXX"  type="text" id="phone" required>
 
+            <label for="cell">
+                Enter your cell number (Optional)
+            </label>
+            <input placeholder="(XXX) XXX-XXXX"  type="text" id="cell">
+
             <button type="submit" id="submit">Submit</button>
         </form>
     </div>
@@ -67,6 +72,10 @@
                             <tr>
                                 <td><span style="margin-right: 8px;">📞</span></td>
                                 <td><a id="phone-render" href="" style="text-decoration: none; color: black;"></a></td>
+                            </tr>
+                            <tr>
+                                <td><span style="margin-right: 8px;">📞</span></td>
+                                <td><a id="cell-render" href="" style="text-decoration: none; color: black;"></a></td>
                             </tr>
                             <tr>
                                 <td><span style="margin-right: 8px;">📧</span></td>
