Change cell emoji.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <td><a id="phone-render" href="" style="text-decoration: none; color: black;"></a></td>
                             </tr>
                             <tr>
-                                <td><span style="margin-right: 8px;">📞</span></td>
+                                <td><span style="margin-right: 8px;">📱</span></td>
                                 <td><a id="cell-render" href="" style="text-decoration: none; color: black;"></a></td>
                             </tr>
                             <tr>
