Add / Remove cell phone.

--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
                     <td width="250" style="vertical-align: middle; padding-left: 16px; padding-bottom: 20px; border-left: 1px solid #0274c8; line-height: 180%; font-size: 14px;">
                         <table role="presentation" cellspacing="0" cellpadding="0">
                             <tr>
+                                <td><span id="cell-icon" style="margin-right: 8px;"></span></td>
+                                <td><a id="cell-render" href="" style="text-align: left; text-decoration: none; color: black;"></a></td>
+                            </tr>
+
+                            <tr>
                                 <td><span style="margin-right: 8px;">📞</span></td>
                                 <td><a id="phone-render" href="" style="text-decoration: none; color: black;"></a></td>
                             </tr>
-                            <tr>
-                                <td><span style="margin-right: 8px;">📱</span></td>
-                                <td><a id="cell-render" href="" style="text-decoration: none; color: black;"></a></td>
-                            </tr>
+                            
                             <tr>
                                 <td><span style="margin-right: 8px;">📧</span></td>
                                 <td><a id="email-render" href="" style="text-decoration: none; color: black;"></a></td>
