Add copy to Hubspot function.

--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
             
 
     </div>
-    <div class="container">
-        <button class="hidden" id="copy-button">
-            Copy Signature
+    <div style="display: flex; width: 100%; gap: 16px;" class="container">
+        <button style="width: 100%;" class="hidden" id="copy-button">
+            Copy to Outlook
+        </button>
+        <button style="width: 100%;" class="hidden" id="hubspot-copy">
+            Copy to HubSpot
         </button>
     </div>
     </body>
