Add linkedin logo and link.

--- a/index.html
+++ b/index.html
@@ -92,9 +92,16 @@
                 </tr>
             
                 <!-- Logo Row -->
-                <tr>
-                    <td colspan="3" style="border-top: 1px solid #005ba8; padding-top: 16px; text-align: left;">
-                        <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/EHT_LOGO_RGB.png" alt="Elevate Health Technologies" width="240px">
+                <tr style="border-top: 1px solid #005ba8; padding-top: 16px; text-align: left;">
+                    <td colspan="2">
+                        <a href="https://www.elevateht.com/" target="_blank">
+                            <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/EHT_LOGO_RGB.png" alt="Elevate Health Technologies" width="240px">
+                        </a>
+                    </td>
+                    <td colspan="1" style="text-align: right;">
+                        <a href="https://www.linkedin.com/company/elevate-ht/" target="_blank">
+                            <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/LinkedIn_icon.svg.webp" alt="LinkedIn_icon" width="20px">
+                        </a>
                     </td>
                 </tr>
 
