Fix horizontal line not appearing when pasted to outlook.

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                 </tr>
             
                 <!-- Logo Row -->
-                <tr style="border-top: 1px solid #005ba8; padding-top: 16px; text-align: left;">
-                    <td colspan="2">
+                <tr>
+                    <td colspan="2" style="border-top: 1px solid #005ba8; padding-top: 16px; text-align: left;">
                         <a href="https://www.elevateht.com/" target="_blank">
                             <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/EHT_LOGO_RGB.png" alt="Elevate Health Technologies" width="240px">
                         </a>
                     </td>
-                    <td colspan="1" style="text-align: right;">
+                    <td colspan="1" style="border-top: 1px solid #005ba8; padding-top: 16px; text-align: right;">
                         <a href="https://www.linkedin.com/company/elevate-ht/" target="_blank">
                             <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/LinkedIn_icon.svg.webp" alt="LinkedIn_icon" width="20px">
                         </a>
