Change linkedin logo to a smaller size via url image.

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                     </td>
             
                     <!-- Name, Title, Company -->
-                    <td white-space: nowrap; mso-line-height-rule: exactly; width="300px" style="vertical-align: middle; padding-left: 16px; padding-bottom: 20px;">
+                    <td white-space: nowrap; mso-line-height-rule: exactly; width="200px" style="vertical-align: middle; padding-left: 16px; padding-bottom: 20px;">
                         <p id="name-render" style="margin: 0; font-size: 18px; line-height: 180%; font-weight: bold; color: #005ba8;"></p>
                         <p id="job-render" style="line-height: 120%; margin: 0; font-size: 14px;"></p>
                         <p style="margin: 0; font-size: 14px; font-weight: bold;">Elevate Health Technologies</p>
                     </td>
             
                     <!-- Contact Info (With Border) -->
-                    <td white-space: nowrap; mso-line-height-rule: exactly; width="300px" style="white-space: nowrap; vertical-align: middle; padding-left: 16px; padding-bottom: 20px; border-left: 1px solid #005ba8; line-height: 180%; font-size: 14px;">
+                    <td white-space: nowrap; mso-line-height-rule: exactly; width="200px" style="white-space: nowrap; vertical-align: middle; padding-left: 16px; padding-bottom: 20px; border-left: 1px solid #005ba8; line-height: 180%; font-size: 14px;">
                         <table white-space: nowrap; mso-line-height-rule: exactly; role="presentation" cellspacing="0" cellpadding="0">
                             <tr>
                                 <td><span id="cell-icon" style="margin-right: 8px;"></span></td>
@@ -112,13 +112,13 @@
                     </td>
                     <td white-space: nowrap; mso-line-height-rule: exactly; colspan="1" style="border-top: 1px solid #005ba8; padding-top: 16px; text-align: right;">
                         <a href="https://www.linkedin.com/company/elevate-ht/" target="_blank">
-                            <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/linkedin%20(1).png" alt="LinkedIn_icon" width="20px">
+                            <img src="https://2942703.fs1.hubspotusercontent-na1.net/hubfs/2942703/LinkedIn_logo.png" alt="LinkedIn_icon" width="20px">
                         </a>
                     </td>
                 </tr>
 
                 <tr mso-line-height-rule: exactly;>
-                    <td white-space: nowrap; mso-line-height-rule: exactly; colspan="3" style="padding-top: 20px; line-height: 100%;">
+                    <td width="600px" white-space: nowrap; mso-line-height-rule: exactly; colspan="3" style="padding-top: 20px; line-height: 100%;">
                         <span style="font-size: 8px; font-style: italic;">
                             <b>Statement of Confidentiality: </b>The information contained in this e-mail and any attachments may contain privileged, confidential, and/or protected health information (PHI) solely for the use of Elevate Health Technologies and the intended recipient(s). If you are not the intended recipient, you are hereby notified that any review, dissemination, distribution, printing, or copying of this email message and/or any attachments is strictly prohibited and may violate applicable laws including the Electronic Communications Privacy Act or HIPAA. If you have received this transmission in error, please notify the sender immediately and permanently delete this email and any attachments. Elevate Health Technologies does not assume any responsibility for changes made to this email message and any attachments after transmission.
                         </span>
